--- a/app/styles/icons-reference.html
+++ b/app/styles/icons-reference.html
@@ -43,6 +43,10 @@
           <div class="icon icon-edit-modify-streamline"></div>
           <input type="text" readonly="readonly" value="edit-modify-streamline">
         </li>
+        <li>
+          <div class="icon icon-dash"></div>
+          <input type="text" readonly="readonly" value="dash">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -73,6 +77,10 @@
         <li>
           <div data-icon="g" class="icon"></div>
           <input type="text" readonly="readonly" value="g">
+        </li>
+        <li>
+          <div data-icon="h" class="icon"></div>
+          <input type="text" readonly="readonly" value="h">
         </li>
       </ul>
     </div>
