--- a/app/styles/icons-reference.html
+++ b/app/styles/icons-reference.html
@@ -47,6 +47,14 @@
           <div class="icon icon-dash"></div>
           <input type="text" readonly="readonly" value="dash">
         </li>
+        <li>
+          <div class="icon icon-download"></div>
+          <input type="text" readonly="readonly" value="download">
+        </li>
+        <li>
+          <div class="icon icon-upload"></div>
+          <input type="text" readonly="readonly" value="upload">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -81,6 +89,14 @@
         <li>
           <div data-icon="h" class="icon"></div>
           <input type="text" readonly="readonly" value="h">
+        </li>
+        <li>
+          <div data-icon="i" class="icon"></div>
+          <input type="text" readonly="readonly" value="i">
+        </li>
+        <li>
+          <div data-icon="j" class="icon"></div>
+          <input type="text" readonly="readonly" value="j">
         </li>
       </ul>
     </div>
