--- a/app/styles/icons-reference.html
+++ b/app/styles/icons-reference.html
@@ -55,6 +55,10 @@
           <div class="icon icon-upload"></div>
           <input type="text" readonly="readonly" value="upload">
         </li>
+        <li>
+          <div class="icon icon-help-circled"></div>
+          <input type="text" readonly="readonly" value="help-circled">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -97,6 +101,10 @@
         <li>
           <div data-icon="j" class="icon"></div>
           <input type="text" readonly="readonly" value="j">
+        </li>
+        <li>
+          <div data-icon="k" class="icon"></div>
+          <input type="text" readonly="readonly" value="k">
         </li>
       </ul>
     </div>
